--- a/MuzyNew/Others/Info.plist
+++ b/MuzyNew/Others/Info.plist
@@ -42,7 +42,7 @@
 					<key>UISceneStoryboardFile</key>
 					<string>RecordingListScreen</string>
 					<key>UISceneClassName</key>
-					<string>RecordingListScreenViewController</string>
+					<string></string>
 				</dict>
 			</array>
 		</dict>
